syntax = "proto3";

package worldmonitor.infrastructure.v1;

import "sebuf/http/annotations.proto";
import "worldmonitor/core/v1/pagination.proto";
import "worldmonitor/infrastructure/v1/infrastructure.proto";

// ListInternetOutagesRequest specifies filters for retrieving internet outages.
message ListInternetOutagesRequest {
  // Start of time range (inclusive), Unix epoch milliseconds.
  int64 start = 1 [(sebuf.http.int64_encoding) = INT64_ENCODING_NUMBER, (sebuf.http.query) = { name: "start" }];
  // End of time range (inclusive), Unix epoch milliseconds.
  int64 end = 2 [(sebuf.http.int64_encoding) = INT64_ENCODING_NUMBER, (sebuf.http.query) = { name: "end" }];
  // Maximum items per page.
  int32 page_size = 3 [(sebuf.http.query) = { name: "page_size" }];
  // Cursor for next page.
  string cursor = 4 [(sebuf.http.query) = { name: "cursor" }];
  // Optional country filter (ISO 3166-1 alpha-2).
  string country = 5 [(sebuf.http.query) = { name: "country" }];
}

// ListInternetOutagesResponse contains internet outages matching the request.
message ListInternetOutagesResponse {
  // The list of internet outages.
  repeated InternetOutage outages = 1;
  // Pagination metadata.
  worldmonitor.core.v1.PaginationResponse pagination = 2;
}
