syntax = "proto3";

package worldmonitor.infrastructure.v1;

import "sebuf/http/annotations.proto";
import "worldmonitor/infrastructure/v1/infrastructure.proto";

// ListServiceStatusesRequest specifies filters for retrieving service statuses.
message ListServiceStatusesRequest {
  // Optional status filter. Returns only services in this state.
  ServiceOperationalStatus status = 1 [(sebuf.http.query) = { name: "status" }];
}

// ListServiceStatusesResponse contains service operational statuses.
message ListServiceStatusesResponse {
  // The list of service statuses.
  repeated ServiceStatus statuses = 1;
}
